--- a/assets/css/styles-2.less
+++ b/assets/css/styles-2.less
@@ -690,11 +690,12 @@ button{
 }
 
 nav{
+	display: block;
 	position: relative;
 	margin: 18px auto 24px;
 	width: 94%;
 	height: 42px;
-  max-width: 1280px;
+	max-width: 1280px;
 	ul{
 		display: block;
 		position: absolute;
@@ -757,12 +758,48 @@ nav{
 
 .wrapper{
 	display: block;
-  position: relative;
-  height: 100%;
-  width: 100%;
+	position: relative;
+	height: 100%;
+	width: 100%;
 }
 
-// --- Video section --- //
+// -- Quiz
+.quiz-wrapper{
+	display: flex;
+	flex-direction: column;
+	padding:16px ;
+	background-color: @white;
+	border-radius: 16px;
+	height: auto;
+}
+
+.quiz-wrapper .col-12{
+	padding: 0;
+	margin: auto;
+	width: 100%;
+}	
+
+// ---- Typeform
+
+.typeform-widget-wrapper{
+	border-radius: 8px;
+	overflow: hidden;
+	border: solid 1px #d4dcdc;
+	width: 100%;
+	height: 400px;
+	background-color: @white;
+}
+
+// ---- Twitch
+
+.twitch-widget-wrapper{
+	width: 100%;
+	height: auto;
+	border-radius: 8px;
+	overflow: hidden;
+	margin-top: 16px;
+}
+
 
 
 /*----- General Section Controls -----*/
